# bbi-scirna-analyze

./: README.md  main.nf  nextflow.config  run.analyze.sh
data/: NOTES  atropos.sequencing_adapters.fasta  illumina_adapters.fasta
modules/: align_bams.nf  cat_matrices.nf  make_barnyard_json.nf  make_barnyard_plot.nf  make_cds.nf  make_copy_matrices_json.nf  make_experiment_dashboard.nf  make_generate_qc.nf  make_genome_files_json.nf  make_knee_plot.nf  make_merge_align_json.nf  make_merge_demux_json.nf  make_mito_umis.nf  make_mito_umis_json.nf  make_process_hashes_json.nf  make_sample_map_json.nf  make_star_align_json.nf  make_trim_bam_json.nf  make_umi_counts.nf  make_umi_counts_json.nf  merge_align.nf  merge_demux.nf  merge_starsolo.nf  merge_starsolo_reports.nf  process_hashes.nf  run_empty_drops.nf  run_scrublet.nf  split_starsolo.nf  split_starsolo_stats.nf  trim_bams.nf
notes/: notes.output_files.20250213.txt  notes.pipeline_comparison.20250407.txt  notes.process_hashes.20250210.txt  notes.process_hashes.20250212.txt  notes.process_hashes.aux.20250213.txt  notes.starsolo.20250214.txt  notes.starsolo.summary.20250325.txt  notes.trimming.20250325.txt
scripts/: make_genes_bed.sh  make_pipeline_json_files.sh
src/process_hashes/: Cargo.toml
src/process_hashes/src/: lib.rs  main.rs  run_rel.sh
tests/: 00tests.txt  merge_align03.json  merge_align05.json  merge_demux00.json  merge_demux02.json  merge_demux04.json  process_hashes05.json  process_hashes06.json  run01.sh  run02.sh  samplesheet00.csv  samplesheet01.csv  samplesheet01.json  samplesheet02.csv  (+31 more)
(+77 files in other folders)
