[package]
name = "process_hashes"
version = "0.4.2"
edition = "2021"

[dependencies]
clap = "4.5.15"
csv = "1.3.0"
detect-compression = "0.1.2"
itertools = "0.13.0"
mimalloc = "0.1.43"
regex = "1.10.6"
rust-htslib = "0.49.0"
serde = { version = "1", features = ["derive"] }
seq_io = "0.3.2"
sprs = "0.11.1"

